applications/homeassistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant
  namespace: homeassistant
  annotations:
    bumpCount: "1"
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway-api-system
  hostnames:
    - homeassistant.production.k8s.evoteum.com
  rules:
    - backendRefs:
        - name: homeassistant-home-assistant
          port: 8080
